# reprise-personal-studio

./: .gitignore  CLAUDE.md  README.md
.claude/: settings.json
.claude/skills/android-build/: SKILL.md
.claude/skills/google-drive/: SKILL.md
.claude/skills/yt-dlp/: SKILL.md
reprise/: .npmrc  package.json  pnpm-lock.yaml
reprise/apps/desktop/: index.html  package.json  vite.config.ts
reprise/apps/desktop/src-tauri/: Cargo.toml  tauri.android.conf.json  tauri.conf.json
reprise/apps/desktop/src-tauri/capabilities/: default.json  mobile.json
reprise/apps/desktop/src-tauri/icons/: icon.icns
reprise/apps/desktop/src-tauri/sidecars/: map_song.py  whisperx_align.py
reprise/apps/desktop/src-tauri/src/: lib.rs  main.rs
reprise/apps/mobile/: build-log.txt  index.html  package.json  vite.config.ts
reprise/apps/mobile (deprecated)/: vite.config.ts
reprise/apps/mobile-rn/: app.json  metro.config.js  package.json  pnpm-lock.yaml  react-native.config.js
reprise/apps/mobile/src-tauri/: Cargo.toml  tauri.conf.json
reprise/apps/mobile/src-tauri/src/: lib.rs
reprise/docs/designs/: reprise-landing.html
reprise/docs/poc-script/: map_song.py
reprise/scripts/: download-binaries.ps1
reprise/supabase/: config.toml
reprise/supabase/migrations/: 00001_create_profiles.sql  00002_create_songs.sql  00003_create_lines.sql  00004_create_sections.sql  00005_create_recordings.sql  00006_add_language_fields.sql  00007_add_preferences.sql  00008_recordings_note_best_take.sql  00009_line_status_auto_tracking.sql  00010_furigana.sql  00011_add_drive_file_ids.sql  00012_annotation_furigana.sql  00013_custom_furigana.sql  00015_align_status.sql
(+126 files in other folders)
