[package]
name = "reprise"
version = "0.1.0"
description = "Personal practice studio for singers"
authors = ["you"]
edition = "2021"

[lib]
name = "reprise_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
