[package]
name = "reprise-mobile"
version = "0.1.0"
description = "Reprise mobile practice companion"
authors = ["you"]
edition = "2021"

[lib]
name = "reprise_mobile_lib"
# staticlib = Android JNI, cdylib = shared library, rlib = Rust linking
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-os = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
